--- a/Phish Tracks/Phish Tracks-Info.plist
+++ b/Phish Tracks/Phish Tracks-Info.plist
@@ -35,11 +35,26 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.1.1</string>
+	<string>2.0.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>CFBundleURLIconFile</key>
+			<string>iTunesArtwork@2x</string>
+			<key>CFBundleURLName</key>
+			<string>com.alecgorge.Phish-Tracks.open-url</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>phishod</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
-	<string>1.1.1</string>
+	<string>2.0.0 beta 1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIBackgroundModes</key>
