--- a/Phish Tracks/Phish Tracks-Info.plist
+++ b/Phish Tracks/Phish Tracks-Info.plist
@@ -54,7 +54,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2.0.0 beta 4</string>
+	<string>2.0.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIBackgroundModes</key>
