--- a/Phish Tracks/Phish Tracks-Info.plist
+++ b/Phish Tracks/Phish Tracks-Info.plist
@@ -29,7 +29,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.alecgorge.Phish-Tracks</string>
+	<string>${BUNDLE_ID}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
