--- a/ipa/PhishOD Beta.plist
+++ b/ipa/PhishOD Beta.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://ci.alecgorge.com/job/PhishOD/lastSuccessfulBuild/artifact/ipa/PhishOD Beta.ipa</string>
+					<string>https://ci.alecgorge.com/job/PhishOD/lastSuccessfulBuild/artifact/ipa/PhishOD Beta.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
