--- a/ipa/PhishOD Beta.plist
+++ b/ipa/PhishOD Beta.plist
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>PhishOD Beta</string>
+				<string>PhishOD β</string>
 			</dict>
 		</dict>
 	</array>
