--- a/PhishOD/Supporting Files/PhishOD-Info.plist
+++ b/PhishOD/Supporting Files/PhishOD-Info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.2.1</string>
+	<string>2.2.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -40,7 +40,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2.2.1</string>
+	<string>2000000</string>
 	<key>Configuration</key>
 	<string>${CONFIGURATION}</string>
 	<key>LSRequiresIPhoneOS</key>
