--- a/PhishOD/Supporting Files/PhishOD-Info.plist
+++ b/PhishOD/Supporting Files/PhishOD-Info.plist
@@ -72,5 +72,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>StatsServer</key>
+	<string>https://www.phishtrackstats.com/api/v2/</string>
 </dict>
 </plist>
