--- a/PhishOD/Supporting Files/PhishOD-Info.plist
+++ b/PhishOD/Supporting Files/PhishOD-Info.plist
@@ -42,7 +42,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2000001</string>
+	<string>321</string>
 	<key>Configuration</key>
 	<string>${CONFIGURATION}</string>
 	<key>LSRequiresIPhoneOS</key>
