--- a/PhishOD copy-Info.plist
+++ b/PhishOD copy-Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundleIcons~ipad</key>
 	<dict/>
 	<key>CFBundleIdentifier</key>
-	<string>com.alecgorge.ios.Listen-to-the-Dead$(BUNDLE_ID)</string>
+	<string>$(BUNDLE_ID)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
