CS 490 Sprint 1 (Artist Universal Search + Artist/Show/Track/Venue Search/Filter)

--- a/PhishOD copy-Info.plist
+++ b/PhishOD copy-Info.plist
@@ -61,6 +61,11 @@
 	</dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>StatsServer</key>
 	<string>https://www.phishtrackstats.com/api/v2/</string>
 	<key>UIBackgroundModes</key>
